--- a/index.css
+++ b/index.css
@@ -54,3 +54,9 @@ body {
     background: azure;
     margin: 1% 1% 1% 1%;
 }
+
+.control {
+    
+    background: azure;
+    margin: 5% 2% 2% 2%;
+}
