--- a/index.css
+++ b/index.css
@@ -1,29 +1,29 @@
 
 body {
-    width: 100%;
-    height: 100vh;
+    margin-top: 1%;
     background-color: #FF4B4B;
 }
 
 .country {
-    margin: 5px 5px 5px 5px;
+    /*margin: 5px 5px 5px 5px;*/
     height: 100%;
     width: 100%;
 }
 
 .city {
-    position: absolute;
+    /*position: absolute;
     left: 25%;
-    top: 25%;
+    top: 25%;*/
     border: 5px dashed pink;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    /*width: 16rem;
-            height: 16rem;*/
-    width: 300px;
-    height: 300px;
+    width: 90%;
+    height: 90%;
+    margin: 1% 1% 1% 1%;
+    /*width: 300px;
+    height: 300px;*/
 }
 
 .citizen {
@@ -44,7 +44,7 @@ body {
 .left-pane {
     height: 90%;
     bottom: 25%;
-    margin: 5% 1% 1% 1%;
+    /*margin: 5% 1% 1% 1%;*/
     border-style: solid;
     background: #fff;
 }
